syntax = "proto3";

message Transaction {
  bytes sign = 1;
  uint64 nonce = 2;
  bytes data = 3;
}

message AppState {
  uint64 height = 1;
  bytes hash = 2;
}

message Empty {
}

message ExecuteRequest {
  repeated Transaction transactions = 1;
}

/*
core              dapp
Connect:
    ------------->
    <- AppState  -
Execute:
    - Tx ... Tx ->
    <- AppState  -
SendTransaction:
    <-    Tx     -
    ------------->
*/
service Dapp {
  rpc Connect (Empty) returns (AppState);
  rpc Execute (ExecuteRequest) returns (AppState);
}

service Core {
  rpc SendTransaction (Transaction) returns (Empty);
}
